# Projet_Cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/maps/: map.json  mapDonjon.json  testmap.json
assets/maps/tilesets/: TX Plant.tsx  TX Props.tsx  TX Shadow Plant.tsx  TX Shadow.tsx  TX Struct.tsx  TX Tileset Grass.tsx  TX Tileset Stone Ground.tsx  TX Tileset Wall.tsx
src/: CharacterItem.cpp  CharacterItem.h  MainWindow.cpp  MainWindow.h  MyScene.h  constants.h  main.cpp
src/core/: AudioManager.cpp  AudioManager.h  FontManager.cpp  FontManager.h  GameScene.cpp  GameScene.h  HUD.cpp  HUD.h  MainMenuButton.cpp  MainMenuButton.h  MainView.cpp  MainView.h  MainWindow.cpp  MainWindow.h  MyScene.cpp  MyScene.h  ScoreManager.cpp  ScoreManager.h  SettingsWidget.cpp  SettingsWidget.h  StartMenuScene.cpp  StartMenuScene.h  WindowSizeComboBox.cpp  WindowSizeComboBox.h
src/core/main_menu/: MainMenuButton.cpp  MainMenuButton.h  ScoreboardWidget.cpp  ScoreboardWidget.h  SettingsWidget.cpp  SettingsWidget.h  StartMenuScene.cpp  StartMenuScene.h  VolumeSlider.cpp  VolumeSlider.h  WindowSizeComboBox.cpp  WindowSizeComboBox.h
src/entities/: CharacterItem.h  Entity.cpp  Entity.h  EntityItem.cpp  EntityItem.h  Projectile.cpp  Projectile.h
src/entities/NPC/: Bat.cpp  Bat.h  CrystalKnight.cpp  CrystalKnight.h  Goblin.cpp  Goblin.h  GoblinProjectile.cpp  GoblinProjectile.h
src/entities/player/: Player.cpp  Player.h  PlayerProjectile.cpp  PlayerProjectile.h  PlayerShield.cpp  PlayerShield.h  PlayerSlash.cpp  PlayerSlash.h
